--- a/Angeli Alura/style.css
+++ b/Angeli Alura/style.css
@@ -51,4 +51,9 @@ body {
                 }
 
                 .botao:first-child { border-radius: 40px 0 0 0;
+                    .ativo{
+                        background-color: var(--botao-ativo);
+                        border-bottom: 4px solid var(--verde);
+                        }}
+                .botao:last-child { border-radius: 0 40px 0 0;
                 }
